PyMaker/datas/object2/RawHTML/i12801/Python_DOC_referPages.pycharm-end-statement-not-working.txt
<div class="post-text" itemprop="text">
<p>So i'm currently learning Python and I code it on the Pycharm IDE. I was trying to write a function but for some reason Pycharm wont accept the 'end=' statement saying something like its not defined.</p>
<p>Here is my code </p>
<pre><code>def fib(n):
    a,b=1,0
    while a &lt; n:
        print (a, end=' ')
        a,b=b,b+a

fib(1000)
</code></pre>
<p>It gives me the following error:</p>
<pre class="lang-none prettyprint-override"><code>line 7
    print (a, end=' ')
                 ^
SyntaxError: invalid syntax
</code></pre>
<p>It's only doing this on Pycharm. When I tried it on the dafult Python IDLE it worked just fine. Can anyone help me fix this?</p>
</div>
<div class="post-text" itemprop="text">
<p>As already answered in comments, only python3 have keywords arguments for <a href="https://docs.python.org/3/library/functions.html?highlight=print#print" rel="nofollow"><code>print()</code></a>:</p>
<pre><code>print(*objects, sep=' ', end='\n', file=sys.stdout, flush=False)
</code></pre>
<p>For python2, <a href="https://docs.python.org/2/reference/simple_stmts.html#print" rel="nofollow"><code>print</code></a> is a statement defined as this and have no keywords arguments:</p>
<pre><code>print_stmt ::=  "print" ([expression ("," expression)* [","]]
                | "&gt;&gt;" expression [("," expression)+ [","]])
</code></pre>
<p>You can either switch to python3 or disable the statement and use the <a href="https://docs.python.org/2/library/functions.html?highlight=print#print" rel="nofollow"><code>print()</code></a> function with this future line at the top of your module:<br/>
<code>from __future__ import print_function</code></p>
<pre><code>$ python2
&gt;&gt;&gt; help(print) # fail because print is a statement in python2
         ^
SyntaxError: invalid syntax
&gt;&gt;&gt; from __future__ import print_function
&gt;&gt;&gt; help(print)
&gt;&gt;&gt; Help on built-in function print in module __builtin__:

print(...)
    print(value, ..., sep=' ', end='\n', file=sys.stdout)
.....
</code></pre>
</div>
<span class="comment-copy">What version of python are you using?</span>
<span class="comment-copy">this is python3 syntax and you clearly use python2.x, change it to <code>print a, </code></span>
<span class="comment-copy">@Ev. <code>end=' '</code> continue next print here</span>
<span class="comment-copy">Depends on your installations, go to file - project settings - project interpreter</span>
<span class="comment-copy">Turns out my interpreter was in fact set to 2.7 instead of 3.5(i thought i uninstalled python 2 after I got 3 lol) Thnaks so much guys!</span>
